CHORE Navbar name set (WEB-103)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SickDeals</title>
 </head>
 <style>
     /* Add a black background color to the top navigation */
@@ -39,10 +39,11 @@
     <!-- Navbar-->
     <nav>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a class="active" href="#Categories">&nbsp;⇩</a>
+            <a class="active" href="#Categories">Categories&nbsp;⇩</a>
+            <a href="#Coupons">Coupons&nbsp;⇩</a>
+            <a href="#Community">Community&nbsp;⇩</a>
+            <a href="#News">News&nbsp;⇩</a>
           </div> 
     </nav>
     <!-- Add Header   -->
