CHORE Navbar logo change (WEB-104)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Navbar-->
     <nav>
         <div class="topnav">
-            <a class="active" href="#Categories">&nbsp;⇩</a>
+            <a class="active" href="#Categories">&nbsp; &#8478;</a>
             <a class="active" href="#Categories">Categories&nbsp;⇩</a>
             <a href="#Coupons">Coupons&nbsp;⇩</a>
             <a href="#Community">Community&nbsp;⇩</a>
