--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SickDeals</title>
+    <title>DealsDealsDeals</title>
 </head>
 <style>
+  .announcement{
+    background-color: #555;
+    text-align: center;
+    padding: 16px;
+    color: #B1B1B1;
+  }
     /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
@@ -36,6 +42,10 @@
 }
 </style>
 <body>
+  <!-- Annoucement -->
+  <div class="announcement">
+    <p>Slickdeals is community-supported. We may get paid by brands or deals, including promoted items. </p>
+  </div>
     <!-- Navbar-->
     <nav>
         <div class="topnav">
