--- a/index.html
+++ b/index.html
@@ -2,64 +2,86 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick Deals</title>
+    <title>LANDING</title>
+    <style>
+      body{
+        background-color: red;
+      }
+       /* Apply a border-box reset to all elements */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* Apply basic styles to the navbar container */
+.navbar {
+    background-color: #fff;
+    color: #333;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center items vertically */
+    padding: 10px 20px;
+}
+
+/* Style for the navbar items (links and button) */
+.navbar a, .navbar button {
+    color: #333;
+    text-decoration: none;
+    margin-right: 20px;
+    font-weight: bold;
+    background: none;
+    border: none;
+    cursor: pointer;
+    /* Add gray border bottom on hover */
+    transition: border-bottom 0.2s ease-in-out;
+    padding-bottom: 22px;
+}
+
+/* Hover effect */
+.navbar .link:hover, .navbar  {
+    border-bottom: 2px solid #ccc; /* Gray border bottom on hover */
+}
+
+
+
+/* Style for the button */
+.navbar button {
+    padding: 8px 16px;
+    background-color: #fff; /* White background color */
+    border: 2px solid #000; /* Black border */
+    color: #000; /* Black font color */
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+/* Style for the logo */
+.logo img {
+    max-height: 45px;
+    height: 45px;
+    width: auto;
+    margin: auto;
+}
+
+    </style>
 </head>
-<style>
-  .announcement{
-    background-color: #555;
-    text-align: center;
-    padding: 16px;
-    color: #B1B1B1;
-  }
-    /* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-</style>
 <body>
-  <!-- Annoucement -->
-  <div class="announcement">
-    <p>Slickdeals is community-supported. We may get paid by brands or deals, including promoted items. </p>
-  </div>
-    <!-- Navbar-->
-    <nav>
-        <div class="topnav">
-            <a class="active" href="#Categories">&nbsp; &#8478;</a>
-            <a class="active" href="#Categories">Categories&nbsp;⇩</a>
-            <a href="#Coupons">Coupons&nbsp;⇩</a>
-            <a href="#Community">Community&nbsp;⇩</a>
-            <a href="#News">News&nbsp;⇩</a>
-          </div> 
-    </nav>
-    <!-- Add Header   -->
-    <h1>Lorem ipsum dolor</h1>
-    <h2>esse pariatur?</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pharetra elit nec diam elementum, non placerat lectus condimentum. In hac habitasse platea dictumst. Vestibulum consectetur velit vel magna fringilla, at cursus quam dictum. Suspendisse euismod dui vitae dui ultricies, ultricies dui ultricies. Nullam sit amet lectus eget magna auctor bibendum. Nunc vehicula rutrum nisi, non condimentum lacus dictum sit amet. Proin ornare erat at massa ullamcorper, interdum ligula eleifend. Suspendisse tincidunt, ante ut aliquam mollis, orci arcu eleifend erat, quis sodales nibh nulla eu metus. In hac habitasse platea dictumst. Etiam tempus elit. Proin laoreet imperdiet lorem, eget tincidunt velit imperdiet a.</p>
-    <span>link</span>
+    <div class="navbar">
+        <div>
+            <a href="#" class="link">Products</a>
+            <a href="#" class="link">Recipes</a>
+            <button>Where to buy</button>
+        </div>
+        <div class="logo">
+            <a href="#"> <img src="https://www.chobani.com/chobani.png" alt="Logo"></a>
+        </div>
+        <div>
+            <a href="#" class="link">About</a>
+            <a href="#" class="link">Impact</a>
+            <a href="#" class="link">Login</a>
+            <a href="#">&#x1F50D;</a>
+        </div>
+    </div>
 </body>
 </html>
