--- a/index.html
+++ b/index.html
@@ -5,65 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LANDING</title>
     <style>
-      body{
-        background-color: red;
-      }
-       /* Apply a border-box reset to all elements */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+        body {
+            background-color: red;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
 
-/* Apply basic styles to the navbar container */
-.navbar {
-    background-color: #fff;
-    color: #333;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; /* Center items vertically */
-    padding: 10px 20px;
-}
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-/* Style for the navbar items (links and button) */
-.navbar a, .navbar button {
-    color: #333;
-    text-decoration: none;
-    margin-right: 20px;
-    font-weight: bold;
-    background: none;
-    border: none;
-    cursor: pointer;
-    /* Add gray border bottom on hover */
-    transition: border-bottom 0.2s ease-in-out;
-    padding-bottom: 22px;
-}
+        .navbar {
+            background-color: #fff;
+            color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
 
-/* Hover effect */
-.navbar .link:hover, .navbar  {
-    border-bottom: 2px solid #ccc; /* Gray border bottom on hover */
-}
+        .navbar a, .navbar button {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding-bottom: 22px;
+        }
 
+        .navbar button {
+            padding: 8px 16px;
+            background-color: #fff;
+            border: 2px solid #000;
+            color: #000;
+            border-radius: 4px;
+        }
 
+        .logo img {
+            max-height: 45px;
+            height: 45px;
+            width: auto;
+            margin: auto;
+        }
 
-/* Style for the button */
-.navbar button {
-    padding: 8px 16px;
-    background-color: #fff; /* White background color */
-    border: 2px solid #000; /* Black border */
-    color: #000; /* Black font color */
-    border-radius: 4px;
-    font-weight: bold;
-}
+        /* Media query for screens smaller than 768px */
+        @media (max-width: 768px) {
+            .navbar {
+                flex-direction: column;
+                align-items: center;
+                padding: 20px;
+            }
 
-/* Style for the logo */
-.logo img {
-    max-height: 45px;
-    height: 45px;
-    width: auto;
-    margin: auto;
-}
+            .navbar a, .navbar button {
+                margin: 10px 0;
+            }
 
+            .navbar div:not(.logo) {
+                text-align: center;
+            }
+        }
     </style>
 </head>
 <body>
@@ -74,7 +77,7 @@
             <button>Where to buy</button>
         </div>
         <div class="logo">
-            <a href="#"> <img src="https://www.chobani.com/chobani.png" alt="Logo"></a>
+            <a href="#"><img src="https://www.chobani.com/chobani.png" alt="Logo"></a>
         </div>
         <div>
             <a href="#" class="link">About</a>
