--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px 20px;
+            position: relative;
+            transition: top 0.3s;
         }
 
         .navbar a, .navbar button {
@@ -61,10 +63,46 @@
             align-items: center;
         }
 
-        .overlay {
+    .overlay {
+        background-color: rgba(255, 255, 255, 0.7); /* White with 70% opacity */
+        padding: 20px;
+        color: #333;
+        display: flex; /* Use Flexbox */
+        flex-direction: column; /* Stack items vertically */
+        justify-content: center; /* Center items vertically */
+        align-items: center; /* Center items horizontally */
+        text-align: center; /* Center text horizontally */
+        height: 25%; /* Take up the full height of the parent container */
+        gap: 10px;
+    }
+        .second-section {
+            background-image: url('https://i.postimg.cc/9FPPg5s3/Recipes-illustrations05.png'); /* Replace 'your-second-image.jpg' with your second image URL */
+            background-size: cover;
+            background-position: center;
+            text-align: left;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+        }
+
+        .overlay-2 {
             background-color: rgba(255, 255, 255, 0.7); /* White with 70% opacity */
             padding: 20px;
             color: #333;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+        .cta-button {
+            background-color: #d75666; /* Solid color #d75666 */
+            color: #fff; /* White font color */
+            padding: 15px; /* Added padding */
+            border: none;
+            border-radius: 4px;
+            text-decoration: none; /* Remove underlines */
         }
 
         /* Media query for screens smaller than 768px */
@@ -86,11 +124,19 @@
             .overlay {
                 padding: 10px;
             }
+
+            .second-section {
+                padding: 50px 0;
+            }
+
+            .overlay-2 {
+                padding: 20px;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <div>
             <a href="#" class="link">Products</a>
             <a href="#" class="link">Recipes</a>
@@ -111,8 +157,33 @@
         <div class="overlay">
             <h1>Buy Delicious Yogurt</h1>
             <p>Experience the creamy goodness of our yogurt. Order now!</p>
-            <a href="#" class="cta-button">Order Now</a>
+            <a href="#" class="cta-button">Learn More</a> <!-- Updated button text and padding -->
         </div>
     </div>
+
+    <div class="second-section">
+        <div class="overlay-2">
+            <h2>Delicious Yogurt</h2>
+            <p>Our yogurt is made from the finest ingredients and crafted with love.</p>
+        </div>
+    </div>
+
+    <script>
+        const navbar = document.getElementById('navbar');
+        const imageSection = document.querySelector('.image-section');
+        let lastScrollPosition = window.pageYOffset;
+
+        window.addEventListener('scroll', () => {
+            const currentScrollPosition = window.pageYOffset;
+            if (currentScrollPosition > lastScrollPosition) {
+                // Scrolling down, hide the navbar
+                navbar.style.top = '-100px';
+            } else {
+                // Scrolling up, show the navbar
+                navbar.style.top = '0';
+            }
+            lastScrollPosition = currentScrollPosition;
+        });
+    </script>
 </body>
 </html>
